--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 mod_id=hypixelsays
 mod_name=Hypixel Says
-mod_version=1.0.1
+mod_version=1.1.0
 mod_description=Hypixel Says requeue mod
+mc_version=1.8.9
 
