Add config file
Add config file
- Options don't reset on server join
Add green/red toggle indicators for `/hs help`

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "${mc_version}-${mod_version}"
+version = "${mod_version}"
 group= "com.yoursole.hypixelsays" // https://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "hypixelsays"
 
