--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 // For those who want the bleeding edge
 buildscript {
     repositories {
@@ -8,32 +7,16 @@ buildscript {
             url = "https://files.minecraftforge.net/maven"
         }
     }
-    
     dependencies {
         classpath "net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT"
     }
 }
-
 apply plugin: "net.minecraftforge.gradle.forge"
-
 compileJava {
     sourceCompatibility = targetCompatibility = "1.8"
 }
 version = "${mod_version}"
 group= "com.yoursole.hypixelsays" // https://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "hypixelsays"
-
-repositories {
-    maven {
-        name = "hypixel"
-        url "https://repo.hypixel.net/repository/Hypixel/"
-    }
-}
-
-dependencies {
-    implementation "net.hypixel:hypixel-api-core:4.2.1"
-    implementation "net.hypixel:hypixel-api-transport-apache:4.2.1"
-}
 
 minecraft {
     version = "1.8.9-11.15.1.2318-1.8.9"
@@ -44,24 +27,30 @@ minecraft {
 }
 
 processResources
-{
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "mod_version", project.version
-    inputs.property "mc_version", project.minecraft.version
+    {
+        // this will ensure that this task is redone when the versions change.
+        inputs.property "mod_version", project.version
+        inputs.property "mc_version", project.minecraft.version
 
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include "mcmod.info"
+        // replace stuff in mcmod.info, nothing else
+        from(sourceSets.main.resources.srcDirs) {
+            include "mcmod.info"
 
-        expand "mod_id":"${mod_id}",
-        "mod_name":"${mod_name}",
-        "mod_version":"${mod_version}",
-        "mod_description":"${mod_description}",
-        "mc_version":"${mc_version}"
+            expand "mod_id":"${mod_id}",
+                    "mod_name":"${mod_name}",
+                    "mod_version":"${mod_version}",
+                    "mod_description":"${mod_description}",
+                    "mc_version":"${mc_version}"
+        }
+
+        // copy everything else, thats not the mcmod.info
+        from(sourceSets.main.resources.srcDirs) {
+            exclude "mcmod.info"
+        }
     }
-        
-    // copy everything else, thats not the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude "mcmod.info"
+
+sourceSets {
+    main {
+        output.resourcesDir = output.classesDir
     }
 }
