--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// For those who want the bleeding edge
 buildscript {
     repositories {
         jcenter()
@@ -11,6 +10,7 @@ buildscript {
         classpath "net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT"
     }
 }
+
 apply plugin: "net.minecraftforge.gradle.forge"
 compileJava {
     sourceCompatibility = targetCompatibility = "1.8"
@@ -26,31 +26,32 @@ minecraft {
     mappings = "stable_22"
 }
 
-processResources
-    {
-        // this will ensure that this task is redone when the versions change.
-        inputs.property "mod_version", project.version
-        inputs.property "mc_version", project.minecraft.version
+processResources {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "mod_version", project.version
+    inputs.property "mc_version", project.minecraft.version
 
-        // replace stuff in mcmod.info, nothing else
-        from(sourceSets.main.resources.srcDirs) {
-            include "mcmod.info"
-
-            expand "mod_id":"${mod_id}",
-                    "mod_name":"${mod_name}",
-                    "mod_version":"${mod_version}",
-                    "mod_description":"${mod_description}",
-                    "mc_version":"${mc_version}"
-        }
-
-        // copy everything else, thats not the mcmod.info
-        from(sourceSets.main.resources.srcDirs) {
-            exclude "mcmod.info"
-        }
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include "mcmod.info"
+        expand "mod_id":"${mod_id}",
+                "mod_name":"${mod_name}",
+                "mod_version":"${mod_version}",
+                "mod_description":"${mod_description}",
+                "mc_version":"${mc_version}"
     }
 
+    // copy everything else, thats not the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude "mcmod.info"
+    }
+}
+
+//Intellij IDEA fix. Uncomment for building with IDEA
+/*
 sourceSets {
     main {
         output.resourcesDir = output.classesDir
     }
 }
+*/
