--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-mod_id=hypixelsays
-mod_name=Hypixel Says
-mod_version=1.1.1
+mod_id=highpixelspeed
+mod_name=Highpixel Speed
+mod_version=1.2.0
 mod_description=Hypixel Says requeue mod
 mc_version=1.8.9
 
