--- a/build.gradle
+++ b/build.gradle
@@ -17,30 +17,37 @@ plugins {
 }
 apply plugin: "net.minecraftforge.gradle.forge"
 
+repositories {
+    jcenter()
+}
+
 configurations {
     shade
+    implementation.extendsFrom shade
 }
+
 dependencies {
-    compile 'org.apache.httpcomponents:httpasyncclient:4.1.5'
     shade "org.apache.httpcomponents:httpasyncclient:4.1.5"
 }
+
 shadowJar {
-    classifier = ''
+    classifier = ""
     configurations = [project.configurations.shade]
-    relocate 'lib.group', "${project.group}.shadow.lib.group" // ensure repackaged packages have unique names
+    exclude "*/*.txt"
+    minimize()
+    relocate("org", "${project.group}.org")
 }
 reobf {
-    shadowJar { }
+    shadowJar {}
 }
-tasks.build.dependsOn reobfShadowJar
-jar.finalizedBy('reobfShadowJar')
+shadowJar.finalizedBy('reobfShadowJar')
 
 compileJava {
     sourceCompatibility = targetCompatibility = "1.8"
 }
 archivesBaseName = "${mod_id}"
 version = "${mod_version}"
-group = "com.highpixelspeed.highpixelspeed"
+group = "${group}"
 
 minecraft {
     version = "1.8.9-11.15.1.2318-1.8.9"
@@ -70,12 +77,11 @@ processResources {
         exclude "mcmod.info"
     }
 }
-
 //Intellij IDEA fix. Uncomment for building with IDEA
-
+/*
 sourceSets {
     main {
         output.resourcesDir = output.classesDir
     }
 }
-
+*/
