--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ configurations {
 }
 
 dependencies {
+    shade "org.apache.commons:commons-lang3:3.12.0"
     shade "org.apache.httpcomponents:httpasyncclient:4.1.5"
 }
 
@@ -34,7 +35,9 @@ shadowJar {
     classifier = ""
     configurations = [project.configurations.shade]
     exclude "*/*.txt"
-    minimize()
+    minimize {
+        exclude(dependency("commons-logging:commons-logging:.*"))
+    }
     relocate("org", "shadow.org")
 }
 reobf {
