--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ processResources {
                 "mc_version":"${mc_version}"
     }
 
-    // copy everything else, thats not the mcmod.info
+    // copy everything else, that's not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude "mcmod.info"
     }
